# PythonCodeExercises

./: README.md  TODO
project_example/: Pipfile  main.py  pyproject.toml  requirements.txt  setup.py
project_example/arithmatic/: another_sum.py
project_example/arithmetic/: another_sum.py
project_example/contacts/: phonebook.py
project_example/decorators/: printer.py
project_example/game_of_life/: cell.py  cell_state.py  generator.py  readme.md  string_builder.py
project_example/health/: prescription.py
project_example/phonebook/: phonebook.py
project_example/sso/: my_service.py  request.py  response.py  single_sign_on.py  sso_token.py
project_example/tennis/: scoring.py
project_example/tests/: test_another_sum_should.py
project_example/tests/arithmatic/: test_another_sum_pytest.py  test_another_sum_unittest.py
project_example/tests/arithmetic/: test_another_sum_pytest.py  test_another_sum_unittest.py
project_example/tests/contacts/: conftest.py  test_phonebook.py  test_phonebook_pytest.py  test_phonebook_unittest.py
project_example/tests/decorators/: test_printers_should.py
project_example/tests/game_of_life/: conftest.py  test_cell_should.py  test_generator_should.py  test_string_builder_should.py
project_example/tests/health/: conftest.py  test_prescription_pytest.py  test_prescriptions.py  test_prescriptions_unittest.py
project_example/tests/phonebook/: test_phonebook.py
project_example/tests/sso/: conftest.py  test_my_service.py
project_example/tire_pressure/: alarm.py  sensor.py
project_example/utilities/: date.py
(+31 files in other folders)
