[tool.poetry]
name = "project_example"
version = "0.1.0"
description = "Test Python ideas"
authors = ["Vincent Farah <vincent.farah@madetech.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
